--- a/Regresión/Regresion_Bajas_Antiguedad_v5.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v5.ipynb
@@ -364,6 +364,36 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "y_xDwGB4P0YC",
+        "outputId": "3c047ae1-2195-497c-c7ef-d381aab5527f",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        }
+      },
+      "source": [
+        "X[:,1]"
+      ],
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([31. , 38.5, 47.5, 44.5, 56. , 54. , 59.5, 19. , 26. , 29. , 35. ,\n",
+              "       42. ])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 78
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "2TE6QtHbPGlm"
       },
       "source": [
@@ -371,7 +401,12 @@
         "# ==============================================================================\n",
         "from sklearn.model_selection import train_test_split\n",
         "\n",
-        "x_train, x_test, y_train, y_test = train_test_split(X2, Y,train_size = 0.8,\n",
+        "x1 = X[:,0]\n",
+        "x1 = x1[:,np.newaxis]\n",
+        "y1 = X[:,1]\n",
+        "y1 = y1[:,np.newaxis]\n",
+        "\n",
+        "x_train, x_test, y_train, y_test = train_test_split(x1, y1,train_size = 0.8,\n",
         "                                        random_state = 0,\n",
         "                                        shuffle      = True\n",
         "                                    )\n",
@@ -384,7 +419,7 @@
         "x_test = sc_x.fit_transform(x_test)\n",
         "y_test= sc_y.fit_transform(y_test)"
       ],
-      "execution_count": null,
+      "execution_count": 81,
       "outputs": []
     },
     {
