--- a/Regresión/Regresion_Bajas_Antiguedad_v5.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v5.ipynb
@@ -394,13 +394,19 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2TE6QtHbPGlm"
+        "id": "2TE6QtHbPGlm",
+        "outputId": "835bcf8b-c8d5-4c04-b6ef-1b883d675bad",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 104
+        }
       },
       "source": [
-        "# Datos en entrenamiento y test.\n",
-        "# ==============================================================================\n",
         "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "from sklearn.svm import SVR\n",
         "\n",
+        "#entrenamos datos\n",
         "x1 = X[:,0]\n",
         "x1 = x1[:,np.newaxis]\n",
         "y1 = X[:,1]\n",
@@ -417,39 +423,13 @@
         "x_train = sc_x.fit_transform(x_train)\n",
         "y_train= sc_y.fit_transform(y_train)\n",
         "x_test = sc_x.fit_transform(x_test)\n",
-        "y_test= sc_y.fit_transform(y_test)"
-      ],
-      "execution_count": 81,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "hpFu72_s7-mj"
-      },
-      "source": [
-        "## Modelo SVM"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "A22ITLBX8C9W",
-        "outputId": "0a760902-53ef-4203-c826-b09c1f86fa46",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 107
-        }
-      },
-      "source": [
-        "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.metrics import accuracy_score\n",
-        "from sklearn.svm import SVR\n",
+        "y_test= sc_y.fit_transform(y_test)\n",
         "\n",
+        "#aplicando modelo svm\n",
         "svr= SVR(kernel='rbf',degree=3, C=1.0, epsilon=0.2)\n",
-        "svr.fit(x_train,y_train)"
+        "svr.fit(x_train,y_train)\n"
       ],
-      "execution_count": null,
+      "execution_count": 82,
       "outputs": [
         {
           "output_type": "stream",
@@ -470,7 +450,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 150
+          "execution_count": 82
         }
       ]
     },
