--- a/Regresión/Regresion_Bajas_Antiguedad_v5.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v5.ipynb
@@ -460,76 +460,12 @@
         "id": "EKtxSMztXyt8"
       },
       "source": [
-        "y_predic = svr.predict(x_train)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "JTGGGcQha12I",
-        "outputId": "d93e9285-ae6b-4ca4-8b3b-a56a5efc9343",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 52
-        }
-      },
-      "source": [
+        "y_predic = svr.predict(x_train)\n",
         "print(svr.score(x_train,y_train))\n",
         "print(svr.score(x_test,y_test))"
       ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "0.949768234950482\n",
-            "0.205026654700323\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "SN9Bl0TYwYWU"
-      },
-      "source": [
-        "x_test"
-      ],
-      "execution_count": null,
+      "execution_count": 83,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "V2CFwIxowU6k",
-        "outputId": "34fda0cb-0067-42e0-f0b9-93eb4009ecb5",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        }
-      },
-      "source": [
-        "y_predic"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([-0.66786437, -0.18962612,  0.75040555, -0.08149598])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 39
-        }
-      ]
     },
     {
       "cell_type": "code",
