--- a/Regresión/Regresion_Bajas_Antiguedad_v5.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v5.ipynb
@@ -394,12 +394,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2TE6QtHbPGlm",
-        "outputId": "835bcf8b-c8d5-4c04-b6ef-1b883d675bad",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 104
-        }
+        "id": "2TE6QtHbPGlm"
       },
       "source": [
         "from sklearn.model_selection import train_test_split\n",
@@ -429,43 +424,79 @@
         "svr= SVR(kernel='rbf',degree=3, C=1.0, epsilon=0.2)\n",
         "svr.fit(x_train,y_train)\n"
       ],
-      "execution_count": 82,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "V97R6T9OUPqn",
+        "outputId": "a6aeccae-f32e-4c5b-c7e5-a0b603d255db",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        }
+      },
+      "source": [
+        "x_valor=sc_x.inverse_transform(x_train)\n",
+        "y_valor= sc_y.inverse_transform(y_train)\n",
+        "y_predic_valor= sc_y.inverse_transform(svr.predict(x_train))\n",
+        "y_predic_valor"
+      ],
+      "execution_count": 90,
       "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/sklearn/utils/validation.py:760: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-            "  y = column_or_1d(y, warn=True)\n"
-          ],
-          "name": "stderr"
-        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "SVR(C=1.0, cache_size=200, coef0=0.0, degree=3, epsilon=0.2, gamma='scale',\n",
-              "    kernel='rbf', max_iter=-1, shrinking=True, tol=0.001, verbose=False)"
+              "array([50.22790588, 56.20731471, 46.7959962 , 53.2532425 , 47.68568031,\n",
+              "       48.01223936, 57.85042515, 50.38472232, 54.42429761])"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 82
+          "execution_count": 90
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EKtxSMztXyt8"
+        "id": "lM440GPiUC7w"
       },
       "source": [
-        "y_predic = svr.predict(x_train)\n",
+        "y_valor"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EKtxSMztXyt8",
+        "outputId": "7f30705d-3c3c-4a0a-e9b1-248e2b17d869",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        }
+      },
+      "source": [
+        "#score\n",
         "print(svr.score(x_train,y_train))\n",
         "print(svr.score(x_test,y_test))"
       ],
-      "execution_count": 83,
-      "outputs": []
+      "execution_count": 86,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0.6030973523074987\n",
+            "0.634170741910758\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -473,7 +504,33 @@
         "id": "iod3jZg-vyXg"
       },
       "source": [
-        ""
+        "color_={0:\"Black\",1:\"tomato\",2:\"fuchsia\",3:\"darkcyan\",4:\"Blue\",5:\"purple\",6:\"Green\"}\n",
+        "fig, ax = plt.subplots()\n",
+        "for ciclo in list(range (2019,2021)):     \n",
+        "  if ciclo == 2019:  \n",
+        "    ax.scatter(\n",
+        "    x_mes[ c1[:,0]==1,0],\n",
+        "    Y[ c1[:,0]==1,0],\n",
+        "    c= color_[1],\n",
+        "    marker = \"^\",\n",
+        "    label = ciclo,\n",
+        "    alpha=0.5)     \n",
+        "\n",
+        "  else:\n",
+        "    ax.scatter(\n",
+        "    x_mes[ c1[:,0]==2,0],\n",
+        "    Y[ c1[:,0]==2,0],\n",
+        "    c= color_[1],\n",
+        "    marker = \"o\",\n",
+        "    label = ciclo,\n",
+        "    alpha=0.5)\n",
+        "\n",
+        "\n",
+        "plt.legend()\n",
+        "plt.xlabel('Mes')\n",
+        "plt.ylabel('Cantidad')\n",
+        "plt.title('Bajas por antiguedad 1 año')\n",
+        "plt.show()"
       ],
       "execution_count": null,
       "outputs": []
