--- a/Regresión/Regresion_Bajas_Antiguedad_v5.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v5.ipynb
@@ -3044,7 +3044,33 @@
         "id": "v-BuUkClc_Xi"
       },
       "source": [
-        ""
+        "#consolidar resultados entrenamiento de las antiguedades\n",
+        "predict_1, predict_2, predict_3, predict_4 = [] ,[],[],[]\n",
+        "predict_5, predict_6, predict_7, predict_8 = [] ,[],[],[]\n",
+        "predict_9 = [] \n",
+        "\n",
+        "predict_1 = resul_predic_agrup1[0] + resul_predic_agrup2[0] + resul_predic_agrup3[0] +resul_predic_agrup4[0] + resul_predic_agrup5[0] + resul_predic_agrup6[0] + resul_predic_agrup7[0] \n",
+        "predict_2 = resul_predic_agrup1[1] + resul_predic_agrup2[1] + resul_predic_agrup3[1] +resul_predic_agrup4[1] + resul_predic_agrup5[0] + resul_predic_agrup6[0] + resul_predic_agrup7[0] \n",
+        "predict_3 = resul_predic_agrup1[2] + resul_predic_agrup2[2] + resul_predic_agrup3[2] +resul_predic_agrup4[2] + resul_predic_agrup5[0] + resul_predic_agrup6[0] + resul_predic_agrup7[0] \n",
+        "predict_4 = resul_predic_agrup1[3] + resul_predic_agrup2[3] + resul_predic_agrup3[3] +resul_predic_agrup4[3] + resul_predic_agrup5[0] + resul_predic_agrup6[0] + resul_predic_agrup7[0] \n",
+        "predict_5 = resul_predic_agrup1[4] + resul_predic_agrup2[4] + resul_predic_agrup3[4] +resul_predic_agrup4[4] + resul_predic_agrup5[0] + resul_predic_agrup6[0] + resul_predic_agrup7[0] \n",
+        "predict_6 = resul_predic_agrup1[5] + resul_predic_agrup2[5] + resul_predic_agrup3[5] +resul_predic_agrup4[5] + resul_predic_agrup5[0] + resul_predic_agrup6[0] + resul_predic_agrup7[0] \n",
+        "predict_7 = resul_predic_agrup1[6] + resul_predic_agrup2[6] + resul_predic_agrup3[6] +resul_predic_agrup4[6] + resul_predic_agrup5[0] + resul_predic_agrup6[0] + resul_predic_agrup7[0] \n",
+        "predict_8 = resul_predic_agrup1[7] + resul_predic_agrup2[7] + resul_predic_agrup3[7] +resul_predic_agrup4[7] + resul_predic_agrup5[0] + resul_predic_agrup6[0] + resul_predic_agrup7[0] \n",
+        "predict_9 = resul_predic_agrup1[8] + resul_predic_agrup2[8] + resul_predic_agrup3[8] +resul_predic_agrup4[8] + resul_predic_agrup5[0] + resul_predic_agrup6[0] + resul_predic_agrup7[0] \n",
+        "\n",
+        "#consolidar resultados test de las antiguedades\n",
+        "predict_1, predict_2, predict_3, predict_4 = [] ,[],[],[]\n",
+        "predict_5, predict_6, predict_7, predict_8 = [] ,[],[],[]\n",
+        "predict_9 = [] \n",
+        "\n",
+        "predict_1 = resul_predic_agrup1[0] + resul_predic_agrup2[0] + resul_predic_agrup3[0] +resul_predic_agrup4[0] + resul_predic_agrup5[0] + resul_predic_agrup6[0] + resul_predic_agrup7[0] \n",
+        "predict_2 = resul_predic_agrup1[1] + resul_predic_agrup2[1] + resul_predic_agrup3[1] +resul_predic_agrup4[1] + resul_predic_agrup5[0] + resul_predic_agrup6[0] + resul_predic_agrup7[0] \n",
+        "predict_3 = resul_predic_agrup1[2] + resul_predic_agrup2[2] + resul_predic_agrup3[2] +resul_predic_agrup4[2] + resul_predic_agrup5[0] + resul_predic_agrup6[0] + resul_predic_agrup7[0] \n",
+        "predict_4 = resul_predic_agrup1[3] + resul_predic_agrup2[3] + resul_predic_agrup3[3] +resul_predic_agrup4[3] + resul_predic_agrup5[0] + resul_predic_agrup6[0] + resul_predic_agrup7[0] \n",
+        "\n",
+        "\n",
+        " "
       ],
       "execution_count": null,
       "outputs": []
