--- a/Regresión/Regresion_Bajas_Antiguedad_v5.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v5.ipynb
@@ -2660,7 +2660,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "0ByiY1u2dsy2",
-        "outputId": "a5d24afb-ad91-4a5e-be60-e9ebffaa1d6a",
+        "outputId": "8929378a-84ea-400d-d38b-4ae916ee4384",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 104
@@ -2694,7 +2694,7 @@
         "svr= SVR(kernel='rbf',degree=3, C=1.0, epsilon=0.2)\n",
         "svr.fit(x_train,y_train)"
       ],
-      "execution_count": 176,
+      "execution_count": 205,
       "outputs": [
         {
           "output_type": "stream",
@@ -2715,7 +2715,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 176
+          "execution_count": 205
         }
       ]
     },
@@ -2723,7 +2723,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "LpvZaTdxeH2d",
-        "outputId": "2454b943-6554-41bb-a816-e73b8774ba2a",
+        "outputId": "43ee3a5c-ab68-483b-8207-4cc0d3a6bb1b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 50
@@ -2735,7 +2735,7 @@
         "y_predic_valor= sc_y.inverse_transform(svr.predict(x_train))\n",
         "y_predic_valor"
       ],
-      "execution_count": 177,
+      "execution_count": 206,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2748,7 +2748,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 177
+          "execution_count": 206
         }
       ]
     },
@@ -2756,7 +2756,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "fKqeXKA_eIKB",
-        "outputId": "a51c2c64-6816-40bf-cacf-c7cfb2885226",
+        "outputId": "57f7660e-ac6d-4b0b-d075-91628080f3f7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 314
@@ -2765,7 +2765,7 @@
       "source": [
         "pd.DataFrame(y_valor)"
       ],
-      "execution_count": 178,
+      "execution_count": 207,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2849,7 +2849,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 178
+          "execution_count": 207
         }
       ]
     },
@@ -2857,7 +2857,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "PSxvAS_BeHlo",
-        "outputId": "de5ef6a1-0ed8-41f0-9a5a-34c70042c819",
+        "outputId": "57f5a170-b6cd-42c2-eac9-3bf87e1be7c8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -2869,7 +2869,7 @@
         "y_predic_valor_t= sc_y.inverse_transform(svr.predict(x_test))\n",
         "y_predic_valor_t"
       ],
-      "execution_count": 179,
+      "execution_count": 208,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2881,7 +2881,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 179
+          "execution_count": 208
         }
       ]
     },
@@ -2960,7 +2960,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "NE402sbadvKG",
-        "outputId": "4a174bb6-6c81-48fb-9529-9d23324520c4",
+        "outputId": "1a2d64f7-ecd2-461b-9866-a85981f2bacb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 50
@@ -2971,7 +2971,7 @@
         "print(svr.score(x_train,y_train))\n",
         "print(svr.score(x_test,y_test))"
       ],
-      "execution_count": 181,
+      "execution_count": 209,
       "outputs": [
         {
           "output_type": "stream",
@@ -2987,7 +2987,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "Mtj0uspBdvck",
-        "outputId": "584d1750-dacf-4189-ea66-7d4c0c633369",
+        "outputId": "df87c7a9-ddf8-426d-fe62-6fb18bd6959b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
@@ -3003,7 +3003,7 @@
         "plt.title('Bajas clientes con antiguedad >= 5 años')\n",
         "plt.show()"
       ],
-      "execution_count": 182,
+      "execution_count": 210,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3017,6 +3017,152 @@
             "tags": [],
             "needs_background": "light"
           }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PAOZlzCrkoFV",
+        "outputId": "a21ebeee-5412-4af4-c74e-d875f5288c14",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        }
+      },
+      "source": [
+        "y_predic_valor"
+      ],
+      "execution_count": 203,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([44.89625622, 78.24186045, 42.62155437, 68.79916696, 49.35016544,\n",
+              "       41.91970776, 84.51391214, 60.56897487, 74.84940719])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 203
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MClLzv3wnPbB",
+        "outputId": "3fd4f524-c297-428b-c39e-922c6cc2134a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "type(x_valor[:])"
+      ],
+      "execution_count": 229,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "numpy.ndarray"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 229
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "glNCfNj7n2Q0",
+        "outputId": "7c058b1d-04d9-4ac1-e263-8b26d0cf4124",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 397
+        }
+      },
+      "source": [
+        "lista1 = [x_valor]\n",
+        "lista2 = [x_valor_t]\n",
+        "\n",
+        "lista1+=lista2\n",
+        "print(lista1)\n",
+        "\n",
+        "# xxx = sorted(lista1)\n",
+        "print(lista1)"
+      ],
+      "execution_count": 250,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[array([[12.24918293],\n",
+            "       [ 5.45049024],\n",
+            "       [10.54950976],\n",
+            "       [ 4.60065366],\n",
+            "       [ 9.69967317],\n",
+            "       [11.39934634],\n",
+            "       [ 6.30032683],\n",
+            "       [ 3.75081707],\n",
+            "       [ 8.        ]]), array([[ 7.],\n",
+            "       [12.],\n",
+            "       [ 5.]])]\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-250-c1755d904b65>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlista1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mxxx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msorted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlista1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxxx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (3,1) (9,1) "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PdsQCmWXpB1y",
+        "outputId": "b43954e8-e38e-46d8-8149-ba1a168ade47",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 104
+        }
+      },
+      "source": [
+        "lista1 = [y_predic_valor]\n",
+        "lista2 = [y_predic_valor_t]\n",
+        "\n",
+        "lista1+=lista2\n",
+        "print(\"Con operador +\")\n",
+        "print(lista1)\n",
+        "\n",
+        "xxx = sorted(x_valor)\n",
+        "print(xxx)"
+      ],
+      "execution_count": 245,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Con operador +\n",
+            "[array([44.89625622, 78.24186045, 42.62155437, 68.79916696, 49.35016544,\n",
+            "       41.91970776, 84.51391214, 60.56897487, 74.84940719]), array([84.41087589, 43.82087567, 73.32772291])]\n",
+            "[array([3.75081707]), array([4.60065366]), array([5.45049024]), array([6.30032683]), array([8.]), array([9.69967317]), array([10.54950976]), array([11.39934634]), array([12.24918293])]\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
