--- a/Regresión/Regresion_Bajas_Antiguedad_v5.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v5.ipynb
@@ -731,14 +731,7 @@
         "id": "l3L8HXGeXEf9"
       },
       "source": [
-        "#Guardamos los resultados\n",
-        "resul_predic_agrup1 = [] \n",
-        "for _ in list(range(len(y_predic_valor))):\n",
-        "  resul_predic_agrup1 = y_predic_valor\n",
-        "\n",
-        "resul_predic_agrup1_t = [] \n",
-        "for _ in list(range(len(y_predic_valor_t))):\n",
-        "  resul_predic_agrup1_t = y_predic_valor_t "
+        "#Guardamos los resultados\n"
       ],
       "execution_count": 380,
       "outputs": []
@@ -1495,14 +1488,7 @@
         "id": "gRSa4dQnbl4O"
       },
       "source": [
-        "#Guardamos los resultados\n",
-        "resul_predic_agrup3 = [] \n",
-        "for _ in list(range(len(y_predic_valor))):\n",
-        "  resul_predic_agrup3 = y_predic_valor\n",
-        "\n",
-        "resul_predic_agrup3_t = [] \n",
-        "for _ in list(range(len(y_predic_valor_t))):\n",
-        "  resul_predic_agrup3_t = y_predic_valor_t "
+        "#Guardamos los resultados\n"
       ],
       "execution_count": 394,
       "outputs": []
@@ -1878,14 +1864,7 @@
         "id": "CNUM7lWHb0wC"
       },
       "source": [
-        "#Guardamos los resultados\n",
-        "resul_predic_agrup4 = [] \n",
-        "for _ in list(range(len(y_predic_valor))):\n",
-        "  resul_predic_agrup4 = y_predic_valor\n",
-        "\n",
-        "resul_predic_agrup4_t = [] \n",
-        "for _ in list(range(len(y_predic_valor_t))):\n",
-        "  resul_predic_agrup4_t = y_predic_valor_t "
+        "#Guardamos los resultados\n"
       ],
       "execution_count": 403,
       "outputs": []
@@ -2261,14 +2240,7 @@
         "id": "gqxj4VDRcarP"
       },
       "source": [
-        "#Guardamos los resultados\n",
-        "resul_predic_agrup5 = [] \n",
-        "for _ in list(range(len(y_predic_valor))):\n",
-        "  resul_predic_agrup5 = y_predic_valor\n",
-        "\n",
-        "resul_predic_agrup5_t = [] \n",
-        "for _ in list(range(len(y_predic_valor_t))):\n",
-        "  resul_predic_agrup5_t = y_predic_valor_t "
+        "#Guardamos los resultados\n"
       ],
       "execution_count": 411,
       "outputs": []
@@ -2644,14 +2616,7 @@
         "id": "CXi4dvuvco2E"
       },
       "source": [
-        "#Guardamos los resultados\n",
-        "resul_predic_agrup6 = [] \n",
-        "for _ in list(range(len(y_predic_valor))):\n",
-        "  resul_predic_agrup6 = y_predic_valor\n",
-        "\n",
-        "resul_predic_agrup6_t = [] \n",
-        "for _ in list(range(len(y_predic_valor_t))):\n",
-        "  resul_predic_agrup6_t = y_predic_valor_t "
+        "#Guardamos los resultados\n"
       ],
       "execution_count": 418,
       "outputs": []
@@ -3023,19 +2988,53 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "om8zbpDhc3lh"
+        "id": "w-VO-c_p2pbP"
       },
       "source": [
-        "#Guardamos los resultados\n",
-        "resul_predic_agrup7 = [] \n",
-        "for _ in list(range(len(y_predic_valor))):\n",
-        "  resul_predic_agrup7 = y_predic_valor\n",
+        "concat_y7, concat_x7 = [],[]\n",
         "\n",
-        "resul_predic_agrup7_t = [] \n",
+        "for _ in list(range(len(y_predic_valor))):\n",
+        "  concat_y7.append(y_predic_valor[_])\n",
+        "  concat_x7.append(x_valor[_])\n",
+        "\n",
         "for _ in list(range(len(y_predic_valor_t))):\n",
-        "  resul_predic_agrup7_t = y_predic_valor_t "
+        "  concat_y7.append(y_predic_valor_t[_])\n",
+        "  concat_x7.append(x_valor_t[_])\n"
       ],
-      "execution_count": 426,
+      "execution_count": 479,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "q5WE7lPs-aSa"
+      },
+      "source": [
+        "concat_x7"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1zDivuVP8-7V"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tkNDi2g74Ort"
+      },
+      "source": [
+        "concat_y7"
+      ],
+      "execution_count": null,
       "outputs": []
     }
   ]
