--- a/Regresión/Regresion_Bajas_Antiguedad_v6.ipynb
+++ b/Regresión/Regresion_Bajas_Antiguedad_v6.ipynb
@@ -467,6 +467,21 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "6LOitxc2Dh4A"
+      },
+      "source": [
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "from sklearn.svm import SVC\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.neighbors import KNeighborsClassifier"
+      ],
+      "execution_count": 133,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "2TE6QtHbPGlm",
         "outputId": "ecf2b28f-bfc6-4899-840a-3a716c76b1e9",
         "colab": {
